<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp" >


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:hint="@string/edit_exercise"
        android:id="@+id/edit_exercises"
        android:layout_weight="1"
        android:layout_marginStart="23dp"
        android:layout_alignTop="@+id/radioGroup"
        android:layout_alignParentStart="true" />

    <RadioGroup
        android:id = "@+id/radioGroup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="38dp"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@id/edit_exercises"
        android:layout_marginStart="74dp">
        <RadioButton android:id="@+id/radio_mins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mins"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/radio_reps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reps"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>

    <Spinner
        android:id = "@+id/exercise_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/exercises_arrays"
        android:prompt="@string/exercises_prompt"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="23dp"
        android:layout_below="@id/radioGroup"
        android:layout_alignEnd="@id/edit_exercises"></Spinner>

    <Button
        android:text="@string/button_convert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_convert"
        android:onClick="calculateCalories"
        android:layout_alignStart="@+id/radioGroup"
        android:layout_marginStart="77dp"
        android:layout_alignTop="@id/exercise_spinner" />

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_convert"
        android:layout_toEndOf="@id/edit_exercises"
        android:layout_marginTop="102dp"
        android:id="@+id/text_calories" />


</RelativeLayout>
